Short walkthrough with findbugs