@@ -183,6 +183,6 @@ public abstract class AbstractComponentModel extends Observable
 	}
 	
 	public Integer getLayer() {
-		return new Integer(position.y + getComponentHeight());
+		return Integer.valueOf(position.y + getComponentHeight()); 
 	}
 }
